[gd_scene load_steps=2 format=3 uid="uid://bjty32t8uers3"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_pvxwn"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_pvxwn")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPos01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 56)

[node name="SpawnPos02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 181)

[node name="SpawnPos03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 306)

[node name="SpawnPos04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 431)

[node name="SpawnPos05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 556)

[node name="SpawnPos06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1356, 681)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PathTimer" to="." method="_on_path_timer_timeout"]
